added score object